--- a/Term Project/Heinen_DSC540_Milestone_2.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_2.ipynb
@@ -427,19 +427,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 426,
    "id": "e874cb26-daee-4504-89f1-7ddf473f3b26",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2831, 82)"
-      ]
-     },
-     "execution_count": 405,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "\"['batter'] not found in axis\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[426], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Remove batter index as all batters are Carlos Santana. \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m carlos \u001b[38;5;241m=\u001b[39m carlos\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatter\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Remove description as all are balls hit into play \u001b[39;00m\n\u001b[1;32m      5\u001b[0m carlos \u001b[38;5;241m=\u001b[39m carlos\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:5344\u001b[0m, in \u001b[0;36mDataFrame.drop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   5196\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdrop\u001b[39m(\n\u001b[1;32m   5197\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m   5198\u001b[0m     labels: IndexLabel \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   5205\u001b[0m     errors: IgnoreRaise \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraise\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   5206\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m DataFrame \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   5207\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   5208\u001b[0m \u001b[38;5;124;03m    Drop specified labels from rows or columns.\u001b[39;00m\n\u001b[1;32m   5209\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   5342\u001b[0m \u001b[38;5;124;03m            weight  1.0     0.8\u001b[39;00m\n\u001b[1;32m   5343\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 5344\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39mdrop(\n\u001b[1;32m   5345\u001b[0m         labels\u001b[38;5;241m=\u001b[39mlabels,\n\u001b[1;32m   5346\u001b[0m         axis\u001b[38;5;241m=\u001b[39maxis,\n\u001b[1;32m   5347\u001b[0m         index\u001b[38;5;241m=\u001b[39mindex,\n\u001b[1;32m   5348\u001b[0m         columns\u001b[38;5;241m=\u001b[39mcolumns,\n\u001b[1;32m   5349\u001b[0m         level\u001b[38;5;241m=\u001b[39mlevel,\n\u001b[1;32m   5350\u001b[0m         inplace\u001b[38;5;241m=\u001b[39minplace,\n\u001b[1;32m   5351\u001b[0m         errors\u001b[38;5;241m=\u001b[39merrors,\n\u001b[1;32m   5352\u001b[0m     )\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/generic.py:4711\u001b[0m, in \u001b[0;36mNDFrame.drop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   4709\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m axis, labels \u001b[38;5;129;01min\u001b[39;00m axes\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m   4710\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m labels \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 4711\u001b[0m         obj \u001b[38;5;241m=\u001b[39m obj\u001b[38;5;241m.\u001b[39m_drop_axis(labels, axis, level\u001b[38;5;241m=\u001b[39mlevel, errors\u001b[38;5;241m=\u001b[39merrors)\n\u001b[1;32m   4713\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m inplace:\n\u001b[1;32m   4714\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_update_inplace(obj)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/generic.py:4753\u001b[0m, in \u001b[0;36mNDFrame._drop_axis\u001b[0;34m(self, labels, axis, level, errors, only_slice)\u001b[0m\n\u001b[1;32m   4751\u001b[0m         new_axis \u001b[38;5;241m=\u001b[39m axis\u001b[38;5;241m.\u001b[39mdrop(labels, level\u001b[38;5;241m=\u001b[39mlevel, errors\u001b[38;5;241m=\u001b[39merrors)\n\u001b[1;32m   4752\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 4753\u001b[0m         new_axis \u001b[38;5;241m=\u001b[39m axis\u001b[38;5;241m.\u001b[39mdrop(labels, errors\u001b[38;5;241m=\u001b[39merrors)\n\u001b[1;32m   4754\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m axis\u001b[38;5;241m.\u001b[39mget_indexer(new_axis)\n\u001b[1;32m   4756\u001b[0m \u001b[38;5;66;03m# Case for non-unique axis\u001b[39;00m\n\u001b[1;32m   4757\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:7000\u001b[0m, in \u001b[0;36mIndex.drop\u001b[0;34m(self, labels, errors)\u001b[0m\n\u001b[1;32m   6998\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mask\u001b[38;5;241m.\u001b[39many():\n\u001b[1;32m   6999\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m errors \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m-> 7000\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlabels[mask]\u001b[38;5;241m.\u001b[39mtolist()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not found in axis\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   7001\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m indexer[\u001b[38;5;241m~\u001b[39mmask]\n\u001b[1;32m   7002\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdelete(indexer)\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"['batter'] not found in axis\""
+     ]
     }
    ],
    "source": [
@@ -452,8 +457,153 @@
     "# Remove game year as its rebetitive with date. \n",
     "carlos = carlos.drop('game_year', axis=1)\n",
     "\n",
+    "# Remove type as its tells us nothing. \n",
+    "carlos = carlos.drop('type', axis=1)\n",
+    "\n",
     "# View new size of df to validate drop. \n",
     "carlos.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e392fc9-986e-470b-8d1d-d6dd2d0db016",
+   "metadata": {},
+   "source": [
+    "Looking at the data set there appears there may be some columns that are entirely empty. Lets remove the entirely empty columns. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 422,
+   "id": "11577282-b020-406b-9e47-7296cf2a6e63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2831, 76)"
+      ]
+     },
+     "execution_count": 422,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test if a column is entirely null\n",
+    "# Use isnull and all to select the columd from the df with no values. \n",
+    "null_columns = carlos.columns[carlos.isnull().all()]\n",
+    "\n",
+    "# Delete entirely null columns from the carlos dataset using drop. \n",
+    "carlos = carlos.drop(null_columns, axis=1)\n",
+    "\n",
+    "# View new size of df to validate drop. \n",
+    "carlos.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58dfb43b-9130-448a-b28e-44e96d11890c",
+   "metadata": {},
+   "source": [
+    "Now lets revaluate where are dataset is at and see which columns to remove next. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 424,
+   "id": "52f88081-118f-4639-a8b6-cc016ed931da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column: 'pitch_type' index: 0\n",
+      "Column: 'game_date' index: 1\n",
+      "Column: 'release_speed' index: 2\n",
+      "Column: 'release_pos_x' index: 3\n",
+      "Column: 'release_pos_z' index: 4\n",
+      "Column: 'player_name' index: 5\n",
+      "Column: 'pitcher' index: 6\n",
+      "Column: 'events' index: 7\n",
+      "Column: 'zone' index: 8\n",
+      "Column: 'des' index: 9\n",
+      "Column: 'game_type' index: 10\n",
+      "Column: 'stand' index: 11\n",
+      "Column: 'p_throws' index: 12\n",
+      "Column: 'home_team' index: 13\n",
+      "Column: 'away_team' index: 14\n",
+      "Column: 'type' index: 15\n",
+      "Column: 'hit_location' index: 16\n",
+      "Column: 'bb_type' index: 17\n",
+      "Column: 'balls' index: 18\n",
+      "Column: 'strikes' index: 19\n",
+      "Column: 'pfx_x' index: 20\n",
+      "Column: 'pfx_z' index: 21\n",
+      "Column: 'plate_x' index: 22\n",
+      "Column: 'plate_z' index: 23\n",
+      "Column: 'on_3b' index: 24\n",
+      "Column: 'on_2b' index: 25\n",
+      "Column: 'on_1b' index: 26\n",
+      "Column: 'outs_when_up' index: 27\n",
+      "Column: 'inning' index: 28\n",
+      "Column: 'inning_topbot' index: 29\n",
+      "Column: 'hc_x' index: 30\n",
+      "Column: 'hc_y' index: 31\n",
+      "Column: 'fielder_2' index: 32\n",
+      "Column: 'sv_id' index: 33\n",
+      "Column: 'vx0' index: 34\n",
+      "Column: 'vy0' index: 35\n",
+      "Column: 'vz0' index: 36\n",
+      "Column: 'ax' index: 37\n",
+      "Column: 'ay' index: 38\n",
+      "Column: 'az' index: 39\n",
+      "Column: 'sz_top' index: 40\n",
+      "Column: 'sz_bot' index: 41\n",
+      "Column: 'hit_distance_sc' index: 42\n",
+      "Column: 'launch_speed' index: 43\n",
+      "Column: 'launch_angle' index: 44\n",
+      "Column: 'effective_speed' index: 45\n",
+      "Column: 'release_spin_rate' index: 46\n",
+      "Column: 'release_extension' index: 47\n",
+      "Column: 'game_pk' index: 48\n",
+      "Column: 'release_pos_y' index: 49\n",
+      "Column: 'estimated_ba_using_speedangle' index: 50\n",
+      "Column: 'estimated_woba_using_speedangle' index: 51\n",
+      "Column: 'woba_value' index: 52\n",
+      "Column: 'woba_denom' index: 53\n",
+      "Column: 'babip_value' index: 54\n",
+      "Column: 'iso_value' index: 55\n",
+      "Column: 'launch_speed_angle' index: 56\n",
+      "Column: 'at_bat_number' index: 57\n",
+      "Column: 'pitch_number' index: 58\n",
+      "Column: 'pitch_name' index: 59\n",
+      "Column: 'home_score' index: 60\n",
+      "Column: 'away_score' index: 61\n",
+      "Column: 'bat_score' index: 62\n",
+      "Column: 'fld_score' index: 63\n",
+      "Column: 'post_away_score' index: 64\n",
+      "Column: 'post_home_score' index: 65\n",
+      "Column: 'post_bat_score' index: 66\n",
+      "Column: 'post_fld_score' index: 67\n",
+      "Column: 'if_fielding_alignment' index: 68\n",
+      "Column: 'of_fielding_alignment' index: 69\n",
+      "Column: 'spin_axis' index: 70\n",
+      "Column: 'delta_home_win_exp' index: 71\n",
+      "Column: 'delta_run_exp' index: 72\n",
+      "Column: 'bat_speed' index: 73\n",
+      "Column: 'swing_length' index: 74\n",
+      "Column: 'unix_time' index: 75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print column names and their corresponding index\n",
+    "\n",
+    "# Loop through each column and print its name and coresponding index. \n",
+    "for index, column_name in enumerate(carlos.columns):\n",
+    "    print(f\"Column: '{column_name}' index: {index}\")"
    ]
   },
   {
@@ -533,7 +683,7 @@
    "id": "d24f6a17-bfdf-4ff8-8bb1-bb9ada8da7da",
    "metadata": {},
    "source": [
-    "# Transformation 3: convert date into Unix time (UTC time zone). \n",
+    "# Transformation 3: Convert Date into Unix Time (UTC Time Zone). \n",
     "\n",
     "This transformation will be done by assigning a start time of 7 pm (most common start time in baseball to all games. Additionally a transformation will be done to unix time which is required for our API weather call. "
    ]
@@ -589,6 +739,24 @@
    "source": [
     "Here we see that we have left our game date and converted to 7pm Central in UTC Unix time "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fbe74c9-e774-4f5b-ada2-42c064fd3853",
+   "metadata": {},
+   "source": [
+    "# Transformation 4: Rename Confusing names from baseball Savant \n",
+    "\n",
+    "Baseball Savant uses some naming systems that are either not descriptive or confusing. In this section we will select those columns and rename them with and intuitive and consistent naming system. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bb7adc5-81a4-4786-8ce4-242b4f405ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
