--- a/Term Project/Heinen_DSC540_Milestone_2.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 588,
    "id": "1b5ceb58-5f0c-4865-8ab2-2bf37263ba82",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 590,
    "id": "406a121f-e199-4644-911f-66c701722e8f",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 591,
    "id": "1d62befc-8b02-417d-835e-60d25d62cb62",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
        "[5 rows x 94 columns]"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 591,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 594,
    "id": "79b0ce27-a16b-4b73-bc0b-3a2ff37845c7",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 595,
    "id": "19c760b0-d97c-48aa-a89c-98611f2169a6",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "(2831, 85)"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 595,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,24 +427,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 596,
    "id": "e874cb26-daee-4504-89f1-7ddf473f3b26",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"['batter'] not found in axis\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[426], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Remove batter index as all batters are Carlos Santana. \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m carlos \u001b[38;5;241m=\u001b[39m carlos\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatter\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Remove description as all are balls hit into play \u001b[39;00m\n\u001b[1;32m      5\u001b[0m carlos \u001b[38;5;241m=\u001b[39m carlos\u001b[38;5;241m.\u001b[39mdrop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m'\u001b[39m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:5344\u001b[0m, in \u001b[0;36mDataFrame.drop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   5196\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdrop\u001b[39m(\n\u001b[1;32m   5197\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m   5198\u001b[0m     labels: IndexLabel \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   5205\u001b[0m     errors: IgnoreRaise \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraise\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   5206\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m DataFrame \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   5207\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   5208\u001b[0m \u001b[38;5;124;03m    Drop specified labels from rows or columns.\u001b[39;00m\n\u001b[1;32m   5209\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   5342\u001b[0m \u001b[38;5;124;03m            weight  1.0     0.8\u001b[39;00m\n\u001b[1;32m   5343\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 5344\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39mdrop(\n\u001b[1;32m   5345\u001b[0m         labels\u001b[38;5;241m=\u001b[39mlabels,\n\u001b[1;32m   5346\u001b[0m         axis\u001b[38;5;241m=\u001b[39maxis,\n\u001b[1;32m   5347\u001b[0m         index\u001b[38;5;241m=\u001b[39mindex,\n\u001b[1;32m   5348\u001b[0m         columns\u001b[38;5;241m=\u001b[39mcolumns,\n\u001b[1;32m   5349\u001b[0m         level\u001b[38;5;241m=\u001b[39mlevel,\n\u001b[1;32m   5350\u001b[0m         inplace\u001b[38;5;241m=\u001b[39minplace,\n\u001b[1;32m   5351\u001b[0m         errors\u001b[38;5;241m=\u001b[39merrors,\n\u001b[1;32m   5352\u001b[0m     )\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/generic.py:4711\u001b[0m, in \u001b[0;36mNDFrame.drop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   4709\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m axis, labels \u001b[38;5;129;01min\u001b[39;00m axes\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m   4710\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m labels \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 4711\u001b[0m         obj \u001b[38;5;241m=\u001b[39m obj\u001b[38;5;241m.\u001b[39m_drop_axis(labels, axis, level\u001b[38;5;241m=\u001b[39mlevel, errors\u001b[38;5;241m=\u001b[39merrors)\n\u001b[1;32m   4713\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m inplace:\n\u001b[1;32m   4714\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_update_inplace(obj)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/generic.py:4753\u001b[0m, in \u001b[0;36mNDFrame._drop_axis\u001b[0;34m(self, labels, axis, level, errors, only_slice)\u001b[0m\n\u001b[1;32m   4751\u001b[0m         new_axis \u001b[38;5;241m=\u001b[39m axis\u001b[38;5;241m.\u001b[39mdrop(labels, level\u001b[38;5;241m=\u001b[39mlevel, errors\u001b[38;5;241m=\u001b[39merrors)\n\u001b[1;32m   4752\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 4753\u001b[0m         new_axis \u001b[38;5;241m=\u001b[39m axis\u001b[38;5;241m.\u001b[39mdrop(labels, errors\u001b[38;5;241m=\u001b[39merrors)\n\u001b[1;32m   4754\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m axis\u001b[38;5;241m.\u001b[39mget_indexer(new_axis)\n\u001b[1;32m   4756\u001b[0m \u001b[38;5;66;03m# Case for non-unique axis\u001b[39;00m\n\u001b[1;32m   4757\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:7000\u001b[0m, in \u001b[0;36mIndex.drop\u001b[0;34m(self, labels, errors)\u001b[0m\n\u001b[1;32m   6998\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mask\u001b[38;5;241m.\u001b[39many():\n\u001b[1;32m   6999\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m errors \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m-> 7000\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlabels[mask]\u001b[38;5;241m.\u001b[39mtolist()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not found in axis\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   7001\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m indexer[\u001b[38;5;241m~\u001b[39mmask]\n\u001b[1;32m   7002\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdelete(indexer)\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"['batter'] not found in axis\""
-     ]
+     "data": {
+      "text/plain": [
+       "(2831, 77)"
+      ]
+     },
+     "execution_count": 596,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -460,6 +455,18 @@
     "# Remove type as its tells us nothing. \n",
     "carlos = carlos.drop('type', axis=1)\n",
     "\n",
+    "# Remove the second fielder_2 repetitive. \n",
+    "carlos = carlos.drop('fielder_2', axis=1)\n",
+    "\n",
+    "# Remove strikezone top as it is irrelevent to our project. \n",
+    "carlos = carlos.drop('sz_top', axis=1)\n",
+    "\n",
+    "# Remove Strikezone bottom as it is irrelevant to our project. \n",
+    "carlos = carlos.drop('sz_bot', axis=1)\n",
+    "\n",
+    "# Remove sv_id : unnecessary. \n",
+    "carlos = carlos.drop('sv_id', axis=1)\n",
+    "\n",
     "# View new size of df to validate drop. \n",
     "carlos.shape"
    ]
@@ -474,17 +481,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 598,
    "id": "11577282-b020-406b-9e47-7296cf2a6e63",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2831, 76)"
+       "(2831, 70)"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 598,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 600,
    "id": "52f88081-118f-4639-a8b6-cc016ed931da",
    "metadata": {},
    "outputs": [
@@ -534,67 +541,61 @@
       "Column: 'p_throws' index: 12\n",
       "Column: 'home_team' index: 13\n",
       "Column: 'away_team' index: 14\n",
-      "Column: 'type' index: 15\n",
-      "Column: 'hit_location' index: 16\n",
-      "Column: 'bb_type' index: 17\n",
-      "Column: 'balls' index: 18\n",
-      "Column: 'strikes' index: 19\n",
-      "Column: 'pfx_x' index: 20\n",
-      "Column: 'pfx_z' index: 21\n",
-      "Column: 'plate_x' index: 22\n",
-      "Column: 'plate_z' index: 23\n",
-      "Column: 'on_3b' index: 24\n",
-      "Column: 'on_2b' index: 25\n",
-      "Column: 'on_1b' index: 26\n",
-      "Column: 'outs_when_up' index: 27\n",
-      "Column: 'inning' index: 28\n",
-      "Column: 'inning_topbot' index: 29\n",
-      "Column: 'hc_x' index: 30\n",
-      "Column: 'hc_y' index: 31\n",
-      "Column: 'fielder_2' index: 32\n",
-      "Column: 'sv_id' index: 33\n",
-      "Column: 'vx0' index: 34\n",
-      "Column: 'vy0' index: 35\n",
-      "Column: 'vz0' index: 36\n",
-      "Column: 'ax' index: 37\n",
-      "Column: 'ay' index: 38\n",
-      "Column: 'az' index: 39\n",
-      "Column: 'sz_top' index: 40\n",
-      "Column: 'sz_bot' index: 41\n",
-      "Column: 'hit_distance_sc' index: 42\n",
-      "Column: 'launch_speed' index: 43\n",
-      "Column: 'launch_angle' index: 44\n",
-      "Column: 'effective_speed' index: 45\n",
-      "Column: 'release_spin_rate' index: 46\n",
-      "Column: 'release_extension' index: 47\n",
-      "Column: 'game_pk' index: 48\n",
-      "Column: 'release_pos_y' index: 49\n",
-      "Column: 'estimated_ba_using_speedangle' index: 50\n",
-      "Column: 'estimated_woba_using_speedangle' index: 51\n",
-      "Column: 'woba_value' index: 52\n",
-      "Column: 'woba_denom' index: 53\n",
-      "Column: 'babip_value' index: 54\n",
-      "Column: 'iso_value' index: 55\n",
-      "Column: 'launch_speed_angle' index: 56\n",
-      "Column: 'at_bat_number' index: 57\n",
-      "Column: 'pitch_number' index: 58\n",
-      "Column: 'pitch_name' index: 59\n",
-      "Column: 'home_score' index: 60\n",
-      "Column: 'away_score' index: 61\n",
-      "Column: 'bat_score' index: 62\n",
-      "Column: 'fld_score' index: 63\n",
-      "Column: 'post_away_score' index: 64\n",
-      "Column: 'post_home_score' index: 65\n",
-      "Column: 'post_bat_score' index: 66\n",
-      "Column: 'post_fld_score' index: 67\n",
-      "Column: 'if_fielding_alignment' index: 68\n",
-      "Column: 'of_fielding_alignment' index: 69\n",
-      "Column: 'spin_axis' index: 70\n",
-      "Column: 'delta_home_win_exp' index: 71\n",
-      "Column: 'delta_run_exp' index: 72\n",
-      "Column: 'bat_speed' index: 73\n",
-      "Column: 'swing_length' index: 74\n",
-      "Column: 'unix_time' index: 75\n"
+      "Column: 'hit_location' index: 15\n",
+      "Column: 'bb_type' index: 16\n",
+      "Column: 'balls' index: 17\n",
+      "Column: 'strikes' index: 18\n",
+      "Column: 'pfx_x' index: 19\n",
+      "Column: 'pfx_z' index: 20\n",
+      "Column: 'plate_x' index: 21\n",
+      "Column: 'plate_z' index: 22\n",
+      "Column: 'on_3b' index: 23\n",
+      "Column: 'on_2b' index: 24\n",
+      "Column: 'on_1b' index: 25\n",
+      "Column: 'outs_when_up' index: 26\n",
+      "Column: 'inning' index: 27\n",
+      "Column: 'inning_topbot' index: 28\n",
+      "Column: 'hc_x' index: 29\n",
+      "Column: 'hc_y' index: 30\n",
+      "Column: 'vx0' index: 31\n",
+      "Column: 'vy0' index: 32\n",
+      "Column: 'vz0' index: 33\n",
+      "Column: 'ax' index: 34\n",
+      "Column: 'ay' index: 35\n",
+      "Column: 'az' index: 36\n",
+      "Column: 'hit_distance_sc' index: 37\n",
+      "Column: 'launch_speed' index: 38\n",
+      "Column: 'launch_angle' index: 39\n",
+      "Column: 'effective_speed' index: 40\n",
+      "Column: 'release_spin_rate' index: 41\n",
+      "Column: 'release_extension' index: 42\n",
+      "Column: 'game_pk' index: 43\n",
+      "Column: 'release_pos_y' index: 44\n",
+      "Column: 'estimated_ba_using_speedangle' index: 45\n",
+      "Column: 'estimated_woba_using_speedangle' index: 46\n",
+      "Column: 'woba_value' index: 47\n",
+      "Column: 'woba_denom' index: 48\n",
+      "Column: 'babip_value' index: 49\n",
+      "Column: 'iso_value' index: 50\n",
+      "Column: 'launch_speed_angle' index: 51\n",
+      "Column: 'at_bat_number' index: 52\n",
+      "Column: 'pitch_number' index: 53\n",
+      "Column: 'pitch_name' index: 54\n",
+      "Column: 'home_score' index: 55\n",
+      "Column: 'away_score' index: 56\n",
+      "Column: 'bat_score' index: 57\n",
+      "Column: 'fld_score' index: 58\n",
+      "Column: 'post_away_score' index: 59\n",
+      "Column: 'post_home_score' index: 60\n",
+      "Column: 'post_bat_score' index: 61\n",
+      "Column: 'post_fld_score' index: 62\n",
+      "Column: 'if_fielding_alignment' index: 63\n",
+      "Column: 'of_fielding_alignment' index: 64\n",
+      "Column: 'spin_axis' index: 65\n",
+      "Column: 'delta_home_win_exp' index: 66\n",
+      "Column: 'delta_run_exp' index: 67\n",
+      "Column: 'bat_speed' index: 68\n",
+      "Column: 'swing_length' index: 69\n"
      ]
     }
    ],
@@ -604,6 +605,41 @@
     "# Loop through each column and print its name and coresponding index. \n",
     "for index, column_name in enumerate(carlos.columns):\n",
     "    print(f\"Column: '{column_name}' index: {index}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92a31105-106f-41b3-bc00-1ab5cce3bcea",
+   "metadata": {},
+   "source": [
+    "Now we will bulk remove the directional pitch velocity and acceleration columns. These datapoints are too specific for our level of analysis in this projet. These columns are currently named: vx0, vyo, ax, ay, and az. We will also remove the hit cordinate values as they are also too specific. These columns are named: hc_x and hc_y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 602,
+   "id": "4e897aad-1d5b-4513-ad13-5124154e42a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2831, 62)"
+      ]
+     },
+     "execution_count": 602,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove all directional pitch velocity and acceleration values \n",
+    "# Also remove Hit cordinate values. \n",
+    "# Use drop method remove columns 29-36\n",
+    "carlos = carlos.drop(carlos.columns[29:37], axis=1)\n",
+    "\n",
+    "# View new size of df to validate drop. \n",
+    "carlos.shape"
    ]
   },
   {
@@ -618,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 604,
    "id": "b7020fff-9852-48ab-be1b-c673859c7306",
    "metadata": {},
    "outputs": [],
@@ -639,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 605,
    "id": "a1817f6b-dcd4-4908-8b22-3a95815753ce",
    "metadata": {},
    "outputs": [
@@ -690,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 607,
    "id": "3a4bdc50-31e7-441f-8c30-bbf01e5c9946",
    "metadata": {},
    "outputs": [
@@ -747,13 +783,67 @@
    "source": [
     "# Transformation 4: Rename Confusing names from baseball Savant \n",
     "\n",
-    "Baseball Savant uses some naming systems that are either not descriptive or confusing. In this section we will select those columns and rename them with and intuitive and consistent naming system. "
+    "Baseball Savant uses some naming systems that are either not descriptive or confusing. In this section we will select those columns and rename them with and intuitive and consistent naming system. \n",
+    "\n",
+    "Note the naming convention documentation can be found here: https://baseballsavant.mlb.com/csv-docs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 610,
+   "id": "7bb7adc5-81a4-4786-8ce4-242b4f405ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In this section we wil use the rename method to rename some coulumne to our naming conventions. \n",
+    "\n",
+    "# Rename player_name to pitcher_name\n",
+    "carlos = carlos.rename(columns={'player_name': 'pitcher_name'})\n",
+    "\n",
+    "# Rename pitcher to pitcher_id\n",
+    "carlos = carlos.rename(columns={'pitcher': 'pitcher_id'})\n",
+    "\n",
+    "# Rename game_pk to game_id\n",
+    "carlos = carlos.rename(columns={'game_pk': 'game_id'})\n",
+    "\n",
+    "# Rename des to description\n",
+    "carlos = carlos.rename(columns={'des': 'description'})\n",
+    "\n",
+    "# Rename stand to batter_stance. \n",
+    "# This is more clear to which way the batter is swinging the bat right or left handed. \n",
+    "carlos = carlos.rename(columns={'stand': 'batter_stance'})\n",
+    "\n",
+    "# Rename pfx_x to pitch_hor_break\n",
+    "# This naming convention is more clear that it is describing:\n",
+    "# Horizontal movement in feet from the catcher's perspective.\n",
+    "carlos = carlos.rename(columns={'pfx_x': 'pitch_hor_break'})\n",
+    "\n",
+    "# Rename pfx_z to pitch_ver_break\n",
+    "# This naming convention is more clear that it is describing:\n",
+    "# Vertical movement in feet from the catcher's perpsective.\n",
+    "carlos = carlos.rename(columns={'pfx_z': 'pitch_ver_break'})\n",
+    "\n",
+    "# Rename launce_speed_angle to contact_type. \n",
+    "# This naming convention better describes what kind and quality of contact a batter makes. \n",
+    "carlos = carlos.rename(columns={'launch_speed_angle': 'contact_type'})\n",
+    "\n",
+    "# Rename zone to pitch_zone_location. \n",
+    "carlos = carlos.rename(columns={'zone': 'pitch_zone_location'})\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb7adc5-81a4-4786-8ce4-242b4f405ad4",
+   "id": "b03c4f6c-6dfe-44ef-b95f-36a558b1c201",
    "metadata": {},
    "outputs": [],
    "source": []
