--- a/Term Project/Heinen_DSC540_Milestone_3.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_3.ipynb
@@ -51,6 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use read_html to read in the list of tables in wiki page. \n",
     "wiki_list_dfs = pd.read_html(\"https://en.wikipedia.org/wiki/List_of_current_Major_League_Baseball_stadiums\",\n",
     "                    header=0)"
    ]
@@ -675,9 +676,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d99f654-e49b-47ae-bae7-ad7899e7ec5a",
+   "metadata": {},
+   "source": [
+    "## Read in The Table from Steamheads.\n",
+    "\n",
+    "This table is essential in adding latitude, longitude and altitude. Latitude and longitude are essential in calling weather data from the API. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b274b63f-a12a-4fa0-a261-b6e0dd595d17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use read_html to read in list of tables from steamheads page. \n",
+    "steam_list_dfs = pd.read_html(\"https://www.seamheads.com/ballparks/index.php\",\n",
+    "                    header=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1b2814bb-06f9-47cc-a3f8-20caaf1aeed3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check length of the list that is returned\n",
+    "# This is the number of tables in the webpage\n",
+    "len(steam_list_dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "74ce6e5a-b1eb-4bff-97cf-b81406ca4560",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(261, 11)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verify the shape of the one table in the steam_list_dfs list. \n",
+    "# Use index 0 \n",
+    "steam_list_dfs[0].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df3fb10-dd82-49fd-a73e-a1787186ff19",
+   "metadata": {},
+   "source": [
+    "As we can see here there are 261 rows in in the df. This is correct because this table contains ever stadium in the United States where a professional baseball game has been played. Not just Major League stadiums. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d277b23-39ff-4259-a0a7-fbee72e426e1",
+   "id": "060c8a9b-934f-4d37-8e0b-4a87ec3a94e8",
    "metadata": {},
    "outputs": [],
    "source": []
