--- a/Term Project/Heinen_DSC540_Milestone_3.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_3.ipynb
@@ -3858,7 +3858,7 @@
    "id": "3ca0583b-9667-4fa7-af3c-80890a01fc39",
    "metadata": {},
    "source": [
-    "We have successfully completed a join of the two separate DataFrames from our websites Wikipedia and Steamheads. Now working with one file we can begin to clean the DataFrame to make it more workable. "
+    "We have successfully completed a join of the two separate DataFrames from our websites Wikipedia and Steamheads. Now working with one file we can begin to clean the DataFrame to make it more workable. Additionally we know that we have accounded for information from all 30  active Major League ballparks. "
    ]
   },
   {
