--- a/Heinen_DSC540_Weeks_5&6.ipynb
+++ b/Heinen_DSC540_Weeks_5&6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "id": "499826c7-ab01-464a-a0a7-6f720cb98f8b",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 145,
    "id": "0bded605-4ca1-45b4-832c-775ad5718781",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 147,
    "id": "e0a39f1e-b2af-48f2-8400-6b43bd9dd387",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 148,
    "id": "564461c6-d621-464d-ac49-a31351c78951",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "[5 rows x 120 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,11 +297,422 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d5df6a99-4301-4625-aef3-fcc57f51de4f",
+   "execution_count": 151,
+   "id": "c02f62c1-145b-4556-ad6f-cf4cf1c6673c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2460, 120)"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print current size of df. \n",
+    "candy.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a78ca8e-c036-4ddf-88e2-1b75eacc8cb1",
+   "metadata": {},
+   "source": [
+    "## Filter out missing data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "9db47c53-b7d5-45c2-96c0-d3376e14e332",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2460, 120)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use dropna to drop all columns that are completely empty. \n",
+    "# Pass Axis 1 to drop columns. \n",
+    "\n",
+    "candy = candy.dropna(axis =1, how ='all')\n",
+    "\n",
+    "# Print Candy shape \n",
+    "candy.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96ce3cf5-b75b-4b09-a51d-0965f3cc1fbf",
+   "metadata": {},
+   "source": [
+    "Here we see that no columns were completely empty. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "8a85b1d4-afee-4053-99cb-1f6865d516f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2460, 120)"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use dropna to drop all rows that are completely empty. \n",
+    "# pass how = \"all to drop rows that are all na\n",
+    "\n",
+    "candy = candy.dropna(how='all')\n",
+    "\n",
+    "# Print Candy shape \n",
+    "candy.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccdb30b7-8c59-4c64-b24c-311bd128271b",
+   "metadata": {},
+   "source": [
+    "Here we can see that there are no rows that are completly empty. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "4b340ce9-58d6-41e3-aa35-d12b50f46c6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2352, 120)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate age \n",
+    "# Test if a value in a column is numeric and remove the rows\n",
+    "candy['Q3: AGE'] = pd.to_numeric(candy['Q3: AGE'], errors='coerce')  # Convert to numeric, coerce non-numeric values to NaN\n",
+    "\n",
+    "\n",
+    "# Remove rows with NaN values in column 'Q3: AGE'\n",
+    "# Use drop NA\n",
+    "candy = candy.dropna(subset=['Q3: AGE'])  \n",
+    "\n",
+    "# print size \n",
+    "print(candy.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0f4bdeb-ec3a-4eda-9936-d08874af5e44",
+   "metadata": {},
+   "source": [
+    "Here we have removed rows where the value input in age was non numeric. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faadf5ec-3d7c-447e-a7ea-4fe7d179d5c0",
+   "metadata": {},
+   "source": [
+    "# Remove Duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "eca695d9-1e5c-4700-8294-fc4bd432e621",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2352, 120)"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check to see if any rows are duplicates or repeats\n",
+    "# use drop_duplicates\n",
+    "candy = candy.drop_duplicates()\n",
+    "\n",
+    "#print shape\n",
+    "candy.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "600176ab-86aa-48f9-8bab-9423767cc20e",
+   "metadata": {},
+   "source": [
+    "Here we see that now rows are complete duplicates. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "61b5042f-4b0e-4559-b5e1-98590808aa40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2352, 120)"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check to see if any of the internal ID is duplicated, meaning we have multiple records for the same person. \n",
+    "candy = candy.drop_duplicates(['Internal ID'])\n",
+    "\n",
+    "#print shape\n",
+    "candy.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5894c1b8-602d-407a-ac75-e7cb1276d66b",
+   "metadata": {},
+   "source": [
+    " Here we see that we have no duplicate rows or entries. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c7c6972-0b45-4d67-80e4-5339ee54a020",
+   "metadata": {},
+   "source": [
+    "## Discretization and Binning\n",
+    "\n",
+    "lets create some bins based on the age demographic. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "266cc19e-7f96-47e5-9553-3859b3ddb32b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    2352.000000\n",
+      "mean       42.617304\n",
+      "std        23.846531\n",
+      "min         1.000000\n",
+      "25%        34.000000\n",
+      "50%        41.000000\n",
+      "75%        50.000000\n",
+      "max      1000.000000\n",
+      "Name: Q3: AGE, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use describe to find some summary stats on age. \n",
+    "\n",
+    "print(candy['Q3: AGE'].describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8fe394a-31f5-440d-94c1-a7d657a416d5",
+   "metadata": {},
+   "source": [
+    "Here we can see that we have some outliers. ages 1 and 1000 are for sure outliers. lets remove those values by filtering out df. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "7a5ab90e-0a46-4132-ac4c-f1137814ce06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2337, 120)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use .loc to filter outliers from the age column of the dataset \n",
+    "candy = candy.loc[(candy['Q3: AGE'] >= 10) & (candy['Q3: AGE'] <= 100)]\n",
+    "\n",
+    "#Print shape\n",
+    "print(candy.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "758f6aba-0e6b-4d29-a4aa-26f2fd70512b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# use pd.cut to create age bins in df. \n",
+    "\n",
+    "# Create bins and labels \n",
+    "bins = [10, 18, 30, 50, 100] \n",
+    "labels = ['10-18', '19-30', '31-50', '51-100']\n",
+    "\n",
+    "# create the bins and add column called 'age_bins' \n",
+    "candy['age_bins'] = pd.cut(candy['Q3: AGE'], bins=bins, labels=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "21fdce8f-4f8d-4b56-9827-ae4c3489c2c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of       Internal ID Q1: GOING OUT? Q2: GENDER  Q3: AGE Q4: COUNTRY  \\\n",
+       "1        90272821             No       Male     44.0        USA    \n",
+       "2        90272829            NaN       Male     49.0         USA   \n",
+       "3        90272840             No       Male     40.0          us   \n",
+       "4        90272841             No       Male     23.0         usa   \n",
+       "6        90272853             No       Male     53.0         usa   \n",
+       "...           ...            ...        ...      ...         ...   \n",
+       "2455     90314359             No       Male     24.0         USA   \n",
+       "2456     90314580             No     Female     33.0         USA   \n",
+       "2457     90314634             No     Female     26.0        USA    \n",
+       "2458     90314658             No       Male     58.0         Usa   \n",
+       "2459     90314802             No     Female     66.0         usa   \n",
+       "\n",
+       "     Q5: STATE, PROVINCE, COUNTY, ETC Q6 | 100 Grand Bar  \\\n",
+       "1                                  NM                MEH   \n",
+       "2                            Virginia                NaN   \n",
+       "3                                  or                MEH   \n",
+       "4                            exton pa                JOY   \n",
+       "6                           Colorado                 NaN   \n",
+       "...                               ...                ...   \n",
+       "2455                               MD                JOY   \n",
+       "2456                         New York                MEH   \n",
+       "2457                        Tennessee                MEH   \n",
+       "2458                   North Carolina                NaN   \n",
+       "2459                     Pennsylvania            DESPAIR   \n",
+       "\n",
+       "     Q6 | Anonymous brown globs that come in black and orange wrappers\\t(a.k.a. Mary Janes)  \\\n",
+       "1                                               DESPAIR                                       \n",
+       "2                                                   NaN                                       \n",
+       "3                                               DESPAIR                                       \n",
+       "4                                               DESPAIR                                       \n",
+       "6                                                   NaN                                       \n",
+       "...                                                 ...                                       \n",
+       "2455                                            DESPAIR                                       \n",
+       "2456                                            DESPAIR                                       \n",
+       "2457                                            DESPAIR                                       \n",
+       "2458                                                NaN                                       \n",
+       "2459                                            DESPAIR                                       \n",
+       "\n",
+       "     Q6 | Any full-sized candy bar Q6 | Black Jacks  ...  \\\n",
+       "1                              JOY              MEH  ...   \n",
+       "2                              NaN              NaN  ...   \n",
+       "3                              JOY              MEH  ...   \n",
+       "4                              JOY          DESPAIR  ...   \n",
+       "6                              NaN              NaN  ...   \n",
+       "...                            ...              ...  ...   \n",
+       "2455                           MEH          DESPAIR  ...   \n",
+       "2456                           JOY              NaN  ...   \n",
+       "2457                           JOY          DESPAIR  ...   \n",
+       "2458                           NaN              NaN  ...   \n",
+       "2459                           JOY          DESPAIR  ...   \n",
+       "\n",
+       "                                     Q9: OTHER COMMENTS      Q10: DRESS  \\\n",
+       "1     Bottom line is Twix is really the only candy w...  White and gold   \n",
+       "2                                                   NaN             NaN   \n",
+       "3                                Raisins can go to hell  White and gold   \n",
+       "4                                                   NaN  White and gold   \n",
+       "6                                                   NaN             NaN   \n",
+       "...                                                 ...             ...   \n",
+       "2455                                                NaN  White and gold   \n",
+       "2456                                                NaN  Blue and black   \n",
+       "2457                                                NaN  Blue and black   \n",
+       "2458                                                NaN             NaN   \n",
+       "2459  You hit all my chocolate highlights, and broug...  White and gold   \n",
+       "\n",
+       "     Unnamed: 113 Q11: DAY Q12: MEDIA [Daily Dish] Q12: MEDIA [Science]  \\\n",
+       "1             NaN   Sunday                     NaN                  1.0   \n",
+       "2             NaN      NaN                     NaN                  NaN   \n",
+       "3             NaN   Sunday                     NaN                  1.0   \n",
+       "4             NaN   Friday                     NaN                  1.0   \n",
+       "6             NaN      NaN                     NaN                  NaN   \n",
+       "...           ...      ...                     ...                  ...   \n",
+       "2455          NaN   Friday                     NaN                  NaN   \n",
+       "2456          NaN   Friday                     NaN                  1.0   \n",
+       "2457          NaN   Friday                     NaN                  1.0   \n",
+       "2458          NaN      NaN                     NaN                  NaN   \n",
+       "2459          NaN   Sunday                     1.0                  NaN   \n",
+       "\n",
+       "     Q12: MEDIA [ESPN] Q12: MEDIA [Yahoo] Click Coordinates (x, y) age_bins  \n",
+       "1                  NaN                NaN                 (84, 25)    31-50  \n",
+       "2                  NaN                NaN                      NaN    31-50  \n",
+       "3                  NaN                NaN                 (75, 23)    31-50  \n",
+       "4                  NaN                NaN                 (70, 10)    19-30  \n",
+       "6                  NaN                NaN                      NaN   51-100  \n",
+       "...                ...                ...                      ...      ...  \n",
+       "2455               NaN                NaN                      NaN    19-30  \n",
+       "2456               NaN                NaN                 (70, 26)    31-50  \n",
+       "2457               NaN                NaN                 (67, 35)    19-30  \n",
+       "2458               NaN                NaN                      NaN   51-100  \n",
+       "2459               NaN                NaN                 (19, 26)   51-100  \n",
+       "\n",
+       "[2337 rows x 121 columns]>"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verify the binning worked. \n",
+    "candy.head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4f690f3-1235-4e93-899e-bed54fd704ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Here we have sucessfully added the age_bins bin. "
+   ]
   }
  ],
  "metadata": {
