--- a/Term Project/Heinen_DSC540_Milestone_3 _with_steam.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_3 _with_steam.ipynb
@@ -5588,9 +5588,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3332cd2e-3a8a-4884-83ae-7bb4c6668a9d",
+   "metadata": {},
+   "source": [
+    "# Export to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "97d1edb1-8361-4c7a-a7c1-c6098992a647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the final dataset to CSV so it can be read in as we move forward in the project. \n",
+    "ballpark.to_csv('ballpark_data_web.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "564563f5-6cd0-4023-9507-27900fabbebf",
+   "id": "42dfb2a1-a7de-4d7e-a91f-5d26317edae1",
    "metadata": {},
    "outputs": [],
    "source": []
