--- a/Term Project/Heinen_DSC540_Milestone_3 _with_steam.ipynb
+++ b/Term Project/Heinen_DSC540_Milestone_3 _with_steam.ipynb
@@ -4472,7 +4472,7 @@
    "id": "3ca0583b-9667-4fa7-af3c-80890a01fc39",
    "metadata": {},
    "source": [
-    "We have successfully completed a join of the two separate DataFrames from our websites Wikipedia and Steamheads. Now working with one file we can begin to clean the DataFrame to make it more workable. Additionally we know that we have accounded for information from all 30  active Major League ballparks. "
+    "We have successfully completed a join of the two separate DataFrames from our websites Wikipedia and Steamheads. Now working with one file we can begin to clean the DataFrame to make it more workable. Additionally, we know that we have accounted for information from all 30  active Major League ballparks. "
    ]
   },
   {
@@ -5092,12 +5092,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa3e1268-2529-4724-89c2-b4cd1d45a87a",
+   "cell_type": "markdown",
+   "id": "dccb9206-665f-41d3-9a3e-fa782c144255",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Ethical Implications\n",
+    "\n",
+    "    \tIn Milestone 3 we made 7 distinct transformations to get our web-based data to a working form for our project. First, we read in the data using web scraping tools to pull the tables from the Wikipedia and Steamheads data sources. Once this data was read into two separate DataFrames we first cleaned up the keys that we would later use to merge our datasets. We then filtered the Steamheads dataset to include only active ballparks. We then completed a fuzzy matching on the keys and merged both datasets together using an inner join on the fuzzy matched keys. Once we had one working dataset, we removed all columns unnecessary to our analysis from the dataset such as ballpark capacity, distance to center field etc. We then renamed the columns to improve readability and eliminate confusion in later milestones.  \n",
+    "\n",
+    "    \tFor this project there were no regulatory or ethical hurdles to cross as this is public information that is simply descriptive about the professional ballparks. One major assumption that was made in cleaning the dataset was to only include active ballparks. This is not entirely accurate as Carlos Santana has seen many stadiums come and go throughout his 17-year career. For example, Santana has played in both the New and Old Yankee Stadiums. The risks associated with this change are that in theory we could pull inaccurate weather information from the API in later steps. There is a real possibility that this inaccuracy could be material and affect the analysis of Santana’s performance in a positive or negative manner. Take for example the Atlanta Braves who moved their stadium across Metro Atlanta. If it was raining in one location and not the other our analysis could suggest that Santana plays worse in the rain. The results of this analysis could potentially lead to financial decisions by teams that either overpay or underpay Santana for his services based on his performances in different climates. One way I plan to mitigate the ethical implications of these transformations is how I chose to focus my analysis. I plan on focusing on more aggregate climate trends within Santana's performance as opposed to analyzing at a very granular meteorological level. Taking larger trends into account should mitigate some of the variation and inconsistencies introduced into the data by only using active ballparks.  \n",
+    "\n",
+    "    \tReguardless of the assumptions made in the cleaning and transforming of this dataset I am very confident in the accuracy as well as where this data was collected from. Major League Baseball is a wildly popular sport with many fans who are quick to regulate the online statistical marketplace for inaccuracies.  \n"
+   ]
   },
   {
    "cell_type": "markdown",
